# flask-rocket-base

./: .env.example  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
app/bootstrap/: __init__.py
app/config/: __init__.py
app/database/: __init__.py
app/helpers/: __init__.py  file_helper.py  session_helper.py
app/models/: base.py  user.py
app/repositories/: base_repository.py  user_repository.py
app/services/: user_service.py
app/views/api/: routes.py
app/views/api/controllers/: __init__.py  user_controller.py
app/views/api/responses/: __init__.py  base_entity.py  base_list.py  error.py  user.py  users.py
app/views/frontend/: routes.py
app/views/frontend/controllers/: __init__.py  index_controller.py
migrations/versions/: 803ff595bfab_.py
templates/layouts/: app.html
templates/pages/: index.html
tests/unit/app/services/: test_user_service.py
tests/unit/mocks/repositories/: __init__.py  mock_user_repository.py
